# qwx

./: .gitignore  AUTHORS  Android.mk  ArmLinux.md  ArmLinux.mk  CMakeLists.txt  Makefile  README.md  hello.c  hello.cpp  libLeslie.cpp  libWechatWrapper.cpp  qwx.pro  resources.qrc
HelloLeslie/app/: build.gradle  proguard-rules.pro
HelloLeslie/app/src/androidTest/java/cn/leetcode/helloleslie/: ApplicationTest.java
HelloLeslie/app/src/main/: AndroidManifest.xml
HelloLeslie/app/src/main/java/cn/leetcode/helloleslie/: HelloLeslie.java  MainActivity.java
HelloLeslie/app/src/main/res/layout/: activity_main.xml
HelloLeslie/app/src/main/res/values/: strings.xml
HelloLeslie/app/src/test/java/cn/leetcode/helloleslie/: ExampleUnitTest.java
HelloWechat/app/: build.gradle
HelloWechat/app/src/androidTest/java/cn/leetcode/hellowechat/: ApplicationTest.java
HelloWechat/app/src/main/: AndroidManifest.xml
HelloWechat/app/src/main/java/cn/leetcode/hellowechat/: MainActivity.java  WechatWrapper.java
HelloWechat/app/src/main/res/layout/: activity_main.xml
HelloWechat/app/src/main/res/values/: strings.xml
HelloWechat/app/src/test/java/cn/leetcode/hellowechat/: ExampleUnitTest.java
HelloWorld/: local.properties
HelloWorld/app/: build.gradle
HelloWorld/app/src/androidTest/java/cn/leetcode/helloworld/: ApplicationTest.java
HelloWorld/app/src/main/: AndroidManifest.xml
HelloWorld/app/src/main/java/cn/leetcode/helloworld/: MainActivity.java
HelloWorld/app/src/main/java/com/tencent/mm/jni/platformcomm/: PlatformCommBridge.java
HelloWorld/app/src/main/java/com/tencent/mm/network/: Java2C.java
HelloWorld/app/src/main/java/com/tencent/mm/xlog/: LogLogicJni.java  Xlog.java
HelloWorld/app/src/main/res/layout/: activity_main.xml
HelloWorld/app/src/test/java/cn/leetcode/helloworld/: ExampleUnitTest.java
doc/: flow.odg
images/: CMakeLists.txt
po/: CMakeLists.txt  kwx.pot  zh_CN.po
qml/: ChatView.qml  ContactListView.qml  IView.qml  LoginView.qml  NavigatorView.qml  SplashView.qml  WXView.qml  main.qml
src/: CMakeLists.txt  chatlog.cpp  chatlog.h  circleimage.cpp  circleimage.h  clipboard.cpp  contact.cpp  contact.h  cookie.cpp  cookie.h  download.cpp  download.h  emotion.cpp  getmsg.cpp  getmsg.h  globaldeclarations.h  headimg.cpp  headimg.h  httpget.cpp  httppost.cpp  i18n.cpp  init.cpp  ipcity.cpp  kwx.desktop  kwxapp.cpp  kwxapp.h  kwxuuid.cpp  kwxuuid.h  kwxwin.cpp  kwxwin.h  logout.cpp  main.cpp  monitor.cpp  org.isoftlinux.kwx.xml  qrcodequick.cpp  qrcodequick.h  qwxuuid.cpp  qwxuuid.h  scan.cpp  sendmsg.cpp  (+8 more)
tests/: CMakeLists.txt  chatlogtest.cpp  chatlogtest.h  cookietest.cpp  cookietest.h  kwxuuidtest.cpp  kwxuuidtest.h  qwxuuidtest.cpp  qwxuuidtest.h  uploadmediatest.cpp  uploadmediatest.h
translations/: CMakeLists.txt  qwx_zh_CN.qm  zh_CN.ts
